# rock-renderer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/io/: reader.hpp
modules/: CMakeLists.txt  box.cpp  volume.cpp
